# trail18

./: README.md  pyproject.toml  replit.md
backend/: crypto_utils.py  crypto_utils_old.py  email_service.py  email_service_old.py  km_mock.py  main.py  main.py.backup  models.py  oauth.py  qumail.db  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EmailReader.tsx  Layout.tsx
frontend/src/contexts/: AuthContext.tsx  KeyVaultContext.tsx
frontend/src/pages/: Compose.tsx  Dashboard.tsx  Inbox.tsx  Login.tsx  Sent.tsx
frontend/src/services/: api.ts
