[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "authlib>=1.6.4",
    "bcrypt>=4.3.0",
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "secure-smtplib>=0.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
